--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,5 +6,6 @@
     <string name="password">Password</string>
     <string name="forgot_password">Forgot password?</string>
     <string name="username">Username</string>
-    <string name="sing_in">SING IN</string>
+    <string name="sing_in">SIGN IN</string>
+    <string name="intro_forgot_password">No worries! Enter your email address and we\'ll help you reset your password.</string>
 </resources>
