--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,8 +1,8 @@
 <resources>
     <string name="app_name">Jolie Cafe</string>
     <string name="title_home">Home</string>
-    <string name="title_dashboard">Dashboard</string>
-    <string name="title_notifications">Notifications</string>
+    <string name="title_favorite">Favorite</string>
+    <string name="title_cart">Cart</string>
     <string name="password">Password</string>
     <string name="forgot_password">Forgot password?</string>
     <string name="username">Username</string>
@@ -11,4 +11,7 @@
 
     <string name="facebook_app_id">665952998072748</string>
     <string name="fb_login_protocol_scheme">fb665952998072748</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="title_profile">Profile</string>
 </resources>
