--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,4 +18,5 @@
     <string name="item_price">90.0000 VND</string>
     <string name="item_favorite">5</string>
     <string name="dot_center_vertical">•</string>
+    <string name="favorite_screen_title">Favorite</string>
 </resources>
