--- a/app/src/main/res/values-night/strings.xml
+++ b/app/src/main/res/values-night/strings.xml
@@ -7,4 +7,5 @@
     <string name="address_book">Address book</string>
     <string name="profile">Profile</string>
     <string name="sweet_latte">Sweet Latte</string>
+    <string name="email">Email</string>
 </resources>
