--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -37,4 +37,10 @@
     <string name="profile">Profile</string>
     <string name="sweet_latte">Sweet Latte</string>
     <string name="email">Email</string>
+    <string name="name">Name</string>
+    <string name="phone_number">Phone number</string>
+    <string name="confirm">Confirm</string>
+    <string name="new_password">New password</string>
+    <string name="save">Save</string>
+    <string name="confirm_password">Confirm password</string>
 </resources>
