--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -47,5 +47,7 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="action">Action</string>
     <string name="choose_from_gallery">Choose from gallery</string>
-    <string name="camera">Camera</string>
+    <string name="cancel">Cancel</string>
+    <string name="address">Address</string>
+    <string name="save">Save</string>
 </resources>
