--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -40,4 +40,5 @@
     <string name="discount">Discount</string>
     <string name="total">Total</string>
     <string name="cancel">Cancel</string>
+    <string name="jolie_coin">Jolie coin</string>
 </resources>
