--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -40,7 +40,7 @@
     <string name="discount">Discount</string>
     <string name="total">Total</string>
     <string name="cancel">Cancel</string>
-    <string name="jolie_coin">Jolie coin</string>
+    <string name="jolie_coin">Jolie Coin</string>
     <string name="settings">Settings</string>
     <string name="order_history">Order history</string>
     <string name="address_book">Address book</string>
@@ -64,4 +64,5 @@
     <string name="add_new_address">Add new address</string>
     <string name="delete_address">Delete address?</string>
     <string name="delete_address_item_text_body">Do you really want to delete this address?</string>
+    <string name="use_jolie_coin">Use %1$d Jolie Coin</string>
 </resources>
