--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -65,4 +65,5 @@
     <string name="delete_address">Delete address?</string>
     <string name="delete_address_item_text_body">Do you really want to delete this address?</string>
     <string name="use_jolie_coin">Use %1$d Jolie Coin</string>
+    <string name="your_order_is_on_the_way">Your order is on the way!</string>
 </resources>
