--- a/app/src/main/res/values-night/strings.xml
+++ b/app/src/main/res/values-night/strings.xml
@@ -28,4 +28,6 @@
     <string name="delete_address_item_text_body">Do you really want to delete this address?</string>
     <string name="current_password">Current password</string>
     <string name="quantity">Quantity:</string>
+    <string name="notifications">Notifications</string>
+    <string name="language">Language</string>
 </resources>
