--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -31,7 +31,6 @@
     <string name="product">Product</string>
     <string name="voucher">Voucher</string>
     <string name="checkout">Checkout</string>
-    <string name="settings">Settings</string>
     <string name="order_history">Order history</string>
     <string name="address_book">Address book</string>
     <string name="profile">Profile</string>
@@ -57,4 +56,7 @@
     <string name="delete_address_item_text_body">Do you really want to delete this address?</string>
     <string name="current_password">Current password</string>
     <string name="quantity">Quantity:</string>
+    <string name="settings">Settings</string>
+    <string name="notifications">Notifications</string>
+    <string name="language">Language</string>
 </resources>
