--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -55,4 +55,5 @@
     <string name="add_new_address">Add new address</string>
     <string name="delete_address">Delete address?</string>
     <string name="delete_address_item_text_body">Do you really want to delete this address?</string>
+    <string name="test_notification">Keep your readers updated. Always. No one wants to be the last one to know some No worries! Enter your email address and we\'ll help you reset your password.</string>
 </resources>
