--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -86,4 +86,5 @@
     <string name="camera">Camera</string>
     <string name="voucher_name">OFF 50% - HAPPY FRIYAY!</string>
     <string name="voucher_description">Orders from 100.000 VND</string>
+    <string name="product_price">%f VND</string>
 </resources>
