--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -66,12 +66,13 @@
     <string name="delete_address_item_text_body">Do you really want to delete this address?</string>
     <string name="current_password">Current password</string>
     <string name="quantity">Quantity:</string>
+    <string name="quantity_checkout">Quantity: %1$d</string>
     <string name="notifications">Notifications</string>
     <string name="language">Language</string>
     <string name="test_notification">Keep your readers updated. Always. No one wants to be the last one to know some No worries! Enter your email address and we\'ll help you reset your password.</string>
     <string name="use_jolie_coin">Use %1$d Jolie Coin</string>
     <string name="your_order_is_on_the_way">Your order is on the way!</string>
-    <string name="enter_a_voucher">Enter a voucher...</string>
+    <string name="enter_a_voucher">Enter a voucher…</string>
     <string name="apply">APPLY</string>
     <string name="free_ship">Freeship</string>
     <string name="back">Back</string>
