--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -93,4 +93,6 @@
     <string name="pasty">Pasty</string>
     <string name="all">All</string>
     <string name="for_you">For you</string>
+    <string name="not_receive_info">"Không nhận được thông tin"</string>
+    <string name="not_receive_info_err">"Không gởi được yêu cầu vui lòng kiểm tra lại"</string>
 </resources>
