--- a/app/src/main/res/values-night/strings.xml
+++ b/app/src/main/res/values-night/strings.xml
@@ -39,4 +39,5 @@
     <string name="for_you">For you</string>
     <string name="not_receive_info">"Không nhận được thông tin"</string>
     <string name="not_receive_info_err">"Không gởi được yêu cầu vui lòng kiểm tra lại"</string>
+    <string name="product_quantity">%1$s items</string>
 </resources>
