--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -86,7 +86,7 @@
     <string name="milk_tea">Milk tea</string>
     <string name="camera">Camera</string>
     <string name="voucher_name">OFF 50% - HAPPY FRIYAY!</string>
-    <string name="voucher_description">Orders from 100.000 VND</string>
+    <string name="voucher_description">Orders from %1$s VND</string>
     <string name="product_price">%1$s VND</string>
     <string name="check_all">Check all</string>
     <string name="milk_shake">Milk shake</string>
