--- a/app/src/main/res/values-night/strings.xml
+++ b/app/src/main/res/values-night/strings.xml
@@ -42,4 +42,8 @@
     <string name="product_quantity">%1$s items</string>
     <string name="status">&#032;- %1$s</string>
     <string name="order_id">Order ID: %1$s</string>
+    <string name="bill_review">Bill review</string>
+    <string name="rating">Rating</string>
+    <string name="how_do_you_feel_about_the_bill">How do you feel about the bill?</string>
+    <string name="comment">Comment</string>
 </resources>
