--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -101,5 +101,9 @@
     <string name="use_coin">[-%1$d]</string>
     <string name="jolie_coin_detail">-%1$d VND</string>
     <string name="forgot_your_password">FORGOT YOUR PASSWORD?</string>
+    <string name="bill_review">Bill review</string>
+    <string name="rating">Rating</string>
+    <string name="how_do_you_feel_about_the_bill">How do you feel about the bill?</string>
+    <string name="comment">Comment</string>
 
 </resources>
