--- a/app/src/main/res/values-night/strings.xml
+++ b/app/src/main/res/values-night/strings.xml
@@ -46,4 +46,5 @@
     <string name="rating">Rating</string>
     <string name="how_do_you_feel_about_the_bill">How do you feel about the bill?</string>
     <string name="comment">Comment</string>
+    <string name="size">Size:</string>
 </resources>
